finaliza autenticacao e autoricacao