@@ -6,15 +6,13 @@ import jakarta.servlet.ServletException;
 import jakarta.servlet.http.HttpServletRequest;
 import jakarta.servlet.http.HttpServletResponse;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
+import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.context.SecurityContextHolder;
-import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
 import org.springframework.stereotype.Component;
 import org.springframework.web.filter.OncePerRequestFilter;
 
 import java.io.IOException;
-import java.util.Collection;
-import java.util.Collections;
-import java.util.stream.Collectors;
+import java.util.List;
 
 @Component
 public class JwtAuthenticationFilter extends OncePerRequestFilter {
@@ -28,29 +26,38 @@ public class JwtAuthenticationFilter extends OncePerRequestFilter {
     protected void doFilterInternal(
             HttpServletRequest request,
             HttpServletResponse response,
-            FilterChain filterChain) throws ServletException, IOException{
+            FilterChain filterChain) throws ServletException, IOException {
 
         String authorizationHeader = request.getHeader("Authorization");
 
-        if(authorizationHeader == null || !authorizationHeader.startsWith("Bearer")){
-            filterChain.doFilter(request,response);
+        if (authorizationHeader == null || !authorizationHeader.startsWith("Bearer ")) {
+            filterChain.doFilter(request, response);
             return;
         }
         String token = authorizationHeader.substring(7);
 
+        try{
         System.out.println("TOKEN RECEBIDO: " + token);
-        String username = jwtService.validaToken(token);
+        String username = jwtService.getUsername(token);
+        String role = jwtService.getRole(token);
         System.out.println("USUÁRIO DO TOKEN: " + username);
+        System.out.println("ROLE DO TOKEN: " + role);
 
         UsernamePasswordAuthenticationToken authentication =
                 new UsernamePasswordAuthenticationToken(
-                    username,
-                    null,
-                    Collections.emptyList()
-        );
-        SecurityContextHolder.getContext().setAuthentication(authentication);
+                        username,
+                        null,
+                        List.of(new SimpleGrantedAuthority(role))
+                );
+        SecurityContextHolder
+                .getContext()
+                .setAuthentication(authentication);
+
+    } catch (Exception e) {
+
+        System.out.println("TOKEN INVÁLIDO: " + e.getMessage());
+    }
 
         filterChain.doFilter(request, response);
     }
-
 }
